--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,8 @@
 @import "tailwindcss";
 @import "flowbite/src/themes/default";
+
+@layer base {
+    body {
+      font-family: 'Nunito Sans', sans-serif;
+    }
+  }
